--- a/API/DataAPI/travelAPI_project/resources/css/app.css
+++ b/API/DataAPI/travelAPI_project/resources/css/app.css
@@ -38,16 +38,16 @@
 }
 
 .content {
-    flex-grow: 1;
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    height: 70%;
+    height: 100%;
 }
 
 .content .search {
-    flex-basis: 30%;
+    flex-basis: 10%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,7 +68,7 @@
 }
 
 .content .list {
-    flex-basis: 70%;
+    flex-basis: 40%;
     border: 1px solid #000;
     border-radius: 4px; 
     padding: 4px;
@@ -132,6 +132,13 @@
 }
 
 /* pagination */
-.pagination {
-    width: 100%;
+.pagination_box {
+    margin: 4px;
+    display: flex;
+    justify-content: center;    
+}
+
+.page-link {
+    font-size: 8px;
+    padding: 4px;
 }
